--- a/content.html
+++ b/content.html
@@ -6,7 +6,7 @@
     <title>Josiahs Place</title>
 </head>
 <body>
-<h1>Home <br></h1> <h3>Hi my name is Josiah Harris. I am currently 16 years old and welcome to my website! Everything you'll see here is my accomplishments, hobbies, how to contact me, and everything you need to know about me. Feel free to stay as long as you want.</h3> <h2>About me</h2> <h2>Resume</h2> <h2>Content</h2> <h2>Contact me</h2>
+<h1>Content<br></h1> <h2>Contact me</h2> <h2>Home</h2> <h2>About me </h2> <h2>Resume</h2>
 
 </body>
 </html>
