GEE GOLY GOODNESS

--- a/abt-me.html
+++ b/abt-me.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josiahs Place</title>
 </head>
+
 <body>
-<h1>About me<br></h1> <h2>Contact me</h2> <h2>Home</h2> <h2>Content</h2> <h2>Resume</h2>
+    <a href="abt-me.html"><h1>About me</h1><br></a>
+    <a href="contacts.html"><h2>Contact me</h2></a>
+    <a href="index.html"><h2>Home</h2></a> 
+    <a href="content.html"><h2>Content</h2></a> 
+    <a href="resume.html"><h2>Resume</h2></a> 
+    <a href="github-projects.html"> <h2>Github Projects</h2></a>
 
 </body>
+
 </html>
