--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josiahs Place</title>
 </head>
+
 <body>
-<header>
-<h1>Home <br></h1> <h3>Hi my name is Josiah Harris. I am currently 16 years old and welcome to my website! Everything you'll see here is my accomplishments, hobbies, how to contact me, and everything you need to know about me. Feel free to stay as long as you want.</h3> <h2>About me</h2> <h2>Resume</h2> <h2>Content</h2> <h2>Contact me</h2>
-</header>
+    <header>
+        <a href="index.html"><h1>Home<br></h1></a>
+        <h3>Hi my name is Josiah Harris. I am currently 16 years old and welcome to my website! Everything you'll see
+            here is my accomplishments, hobbies, how to contact me, and everything you need to know about me. Feel free
+            to stay as long as you want.</h3> 
+        <a href="abt-me.html"><h2>About me</h2></a>
+        <a href="resume.html"><h2>Resume</h2></a>
+        <a href="content.html"><h2>Content</h2></a>
+        <a href="contacts.html"><h2>Contact me</h2></a>
+    </header>
 </body>
+
 </html>
