--- a/github-projects.html
+++ b/github-projects.html
@@ -8,13 +8,18 @@
 </head>
 
 <body>
-    <a href="github-projects.html"><h1>Github Projects</h1></a>
-    <a href="content.html"><h2>Content</h2></a>
-    <a href="index.html"><h2>Home <br></h2>
-    <a href="abt-me.html"><h2>About me</h2></a>
-    <a href="resume.html"><h2>Resume</h2></a>
-    <a href="contacts.html"><h2>Contact me</h2></a>
-
+        <a href="index.html"><h2>Home<br></h2></a>
+        <a href="abt-me.html"><h2>About me</h2></a>
+        <a href="resume.html"><h2>Resume</h2></a>
+        <a href="content.html"><h2>Content</h2></a>
+        <a href="contacts.html"><h2>Contact me</h2></a>
+        <a href="github-projects.html"><h1>Github Projects</h1></a>
+<img src="T O Z 1.png" alt="image of the tale of ze">
+<img src="T O Z 2.png" alt="image of the tale of ze">
+<img src="Screenshot of P E 1.png" alt="image of the jurassic express">
+<img src="Screenshot of P E 2.png" alt="image of the jurassic express">
+<img src="cert ss.png" alt="image of the certificate maker">
+<img src="cert ss 2.png" alt="image of the certificate maker">
 </body>
 
 </html>
