--- a/abt-me.html
+++ b/abt-me.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-    <a href="abt-me.html"><h1>About me</h1><br></a>
-    <a href="contacts.html"><h2>Contact me</h2></a>
-    <a href="index.html"><h2>Home</h2></a> 
-    <a href="content.html"><h2>Content</h2></a> 
-    <a href="resume.html"><h2>Resume</h2></a> 
-    <a href="github-projects.html"> <h2>Github Projects</h2></a>
+        <a href="index.html"><h2>Home<br></h2></a>
+        <a href="abt-me.html"><h1>About me</h1></a>
+        <a href="resume.html"><h2>Resume</h2></a>
+        <a href="content.html"><h2>Content</h2></a>
+        <a href="contacts.html"><h2>Contact me</h2></a>
+        <a href="github-projects.html"><h2>Github Projects</h2></a>
 
 </body>
 
