--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="resume.html"><h2>Resume</h2></a>
         <a href="content.html"><h2>Content</h2></a>
         <a href="contacts.html"><h2>Contact me</h2></a>
+<img src="image of josiah 1.png" alt="Image of josiah">
     </header>
 </body>
 
