--- a/resume.html
+++ b/resume.html
@@ -8,13 +8,12 @@
 </head>
 
 <body>
-    <a href="resume.html"><h1>Resume</h1></a>
-    <a href="index.html"><h2>Home</h2></a>
-    <a href="abt-me.html"><h2>About me</h2></a>
-    <a href="contacts.html"><h2>Contact me</h2></a>
-    <a href="content.html"><h2>Content</h2></a>
-    <a href="github-projects.html"><h2>Github Projects</h2></a>
-
+        <a href="index.html"><h2>Home<br></h2></a>
+        <a href="abt-me.html"><h2>About me</h2></a>
+        <a href="resume.html"><h1>Resume</h1></a>
+        <a href="content.html"><h2>Content</h2></a>
+        <a href="contacts.html"><h2>Contact me</h2></a>
+        <a href="github-projects.html"><h2>Github Projects</h2></a>
 </body>
 
 </html>
