--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josiahs Place</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
         <a href="index.html"><h1>Home<br></h1></a>
-        <h3>Hi my name is Josiah Harris. I am currently 16 years old and welcome to my website! Everything you'll see
-            here is my accomplishments, hobbies, how to contact me, and everything you need to know about me. Feel free
-            to stay as long as you want.</h3> 
         <a href="abt-me.html"><h2>About me</h2></a>
         <a href="resume.html"><h2>Resume</h2></a>
         <a href="content.html"><h2>Content</h2></a>
         <a href="contacts.html"><h2>Contact me</h2></a>
+    </header> 
+    <h3>Hi my name is Josiah Harris. I am currently 16 years old and welcome to my website! Everything you'll see
+        here is my accomplishments, hobbies, how to contact me, and everything you need to know about me. Feel free
+        to stay as long as you want.</h3> 
 <img src="image of josiah 1.png" alt="Image of josiah">
-    </header>
+
 </body>
 
 </html>
