GOT IT (thank you mr fast)

--- a/abt-me.html
+++ b/abt-me.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<header>
+<header class="abtt">
         <a href="index.html"><h2>Home<br></h2></a>
         <a href="abt-me.html"><h1>About me</h1></a>
         <a href="more-abt-me.html"><h2>More about me</h2></a>
