--- a/index.html
+++ b/index.html
@@ -8,19 +8,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <header>
-        <a href="index.html"><h1>Home<br></h1></a>
-        <a href="abt-me.html"><h2>About me</h2></a>
-        <a href="resume.html"><h2>Resume</h2></a>
-        <a href="content.html"><h2>Content</h2></a>
-        <a href="contacts.html"><h2>Contact me</h2></a>
-    </header> 
+<body class="home">
+
+    <header class="homet">
+
+        <a href="index.html" class="button-92">
+            <span>Home</span>
+        </a>
+        <a href="abt-me.html" class="button-92"> <span>About me</span></a>
+        
+        <a href="resume.html">
+            <h2>Resume</h2>
+        </a>
+        <a href="content.html">
+            <h2>Content</h2>
+        </a>
+        <a href="contacts.html">
+            <h2>Contact me</h2>
+        </a>
+        <a href="github-projects.html">
+            <h2>Github Projects</h2>
+        </a>
+
+    </header>
     <h3>Hi my name is Josiah Harris. I am currently 16 years old and welcome to my website! Everything you'll see
         here is my accomplishments, hobbies, how to contact me, and everything you need to know about me. Feel free
-        to stay as long as you want.</h3> 
-<img src="image of josiah 1.png" alt="Image of josiah">
+        to stay as long as you want.</h3>
+    <img src="image of josiah 1.png" alt="Image of josiah">
 
+    <footer>Josiah Harris <br> Doop <br> something else <br> this <br> that
+    </footer>
 </body>
 
 </html>
