--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="resumet">
         <a href="index.html"><h2>Home<br></h2></a>
         <a href="abt-me.html"><h2>About me</h2></a>
         <a href="resume.html"><h1>Resume</h1></a>
