--- a/more-abt-me.html
+++ b/more-abt-me.html
@@ -9,16 +9,32 @@
 </head>
 
 <body>
-<header>
-    <a href="index.html"><h2>Home <br></h2> </a>
-    <a href="abt-me.html"><h2>About me</h2></a>        
-    <a href="resume.html"><h2>Resume</h2></a> 
-    <a href="content.html"><h2>Content</h2></a>
-    <a href="more-abt-me.html"><h1>More About Me</h1></a>
-    <a href="contacts.html"><h2>Contact me</h2></a>
-    <a href="github-projects.html"><h2>Github Projects</h2></a>
-</header>
-<img src="image of josiah 2.png" alt="Image of josiah">
+    <header>
+
+        <a href="index.html">
+            <h2>Home <br></h2>
+        </a> </button>
+        <a href="abt-me.html">
+            <h2>About me</h2>
+        </a>
+        <a href="more-abt-me.html">
+            <h1>More About Me</h1>
+        </a>
+        <a href="resume.html">
+            <h2>Resume</h2>
+        </a>
+        <a href="content.html">
+            <h2>Content</h2>
+        </a>
+        <a href="contacts.html">
+            <h2>Contact me</h2>
+        </a>
+        <a href="github-projects.html">
+            <h2>Github Projects</h2>
+        </a>
+
+    </header>
+    <img src="image of josiah 2.png" alt="Image of josiah">
 </body>
 
 </html>
