--- a/contacts.html
+++ b/contacts.html
@@ -10,15 +10,33 @@
 
 <body>
     <header>
-        <a href="index.html"><h2>Home<br></h2></a>
-        <a href="abt-me.html"><h2>About me</h2></a>
-        <a href="resume.html"><h2>Resume</h2></a>
-        <a href="content.html"><h2>Content</h2></a>
-        <a href="contacts.html"><h1>Contact me</h1></a>
-        <a href="github-projects.html"><h2>Github Projects</h2></a>
-    </header>    
-    
-
+        <a href="index.html"class="button-92">
+            <span>Home</span>
+        </a>
+        <a href="abt-me.html"class="button-92">
+            <span>About me</span>
+        </a>
+        <a href="resume.html"class="button-92">
+            <span>Resume</span>
+        </a>
+        <a href="content.html"class="button-92">
+            <span>Content</span>
+        </a>
+        <a href="contacts.html"class="button-92">
+            <span>Contact me</span>
+        </a>
+        <a href="academics.html"class="button-92">
+            <span>Academics</span>
+        </a>
+    </header>
+    <img src="T O Z 1.png" alt="image of the tale of ze">
+    <img src="T O Z 2.png" alt="image of the tale of ze">
+    <img src="Screenshot of P E 1.png" alt="image of the jurassic express">
+    <img src="Screenshot of P E 2.png" alt="image of the jurassic express">
+    <img src="cert ss.png" alt="image of the certificate maker">
+    <img src="cert ss 2.png" alt="image of the certificate maker">
+    <footer>Josiah Harris <br> Doop <br> something else <br> this <br> that
+    </footer>
 </body>
 
 </html>
