--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
         <a href="index.html" class="button-92">
             <span>Home</span>
         </a>
-        <a href="abt-me.html" class="button-92"> <span>About me</span></a>
-        
-        <a href="resume.html">
-            <h2>Resume</h2>
+        <a href="abt-me.html" class="button-92"> 
+            <span>About me</span>
         </a>
-        <a href="content.html">
-            <h2>Content</h2>
+        <a href="resume.html" class="button-92">
+            <span>Resume</span>
         </a>
-        <a href="contacts.html">
-            <h2>Contact me</h2>
+        <a href="content.html"class="button-92">
+            <span>Content</span>
         </a>
-        <a href="github-projects.html">
-            <h2>Github Projects</h2>
+        <a href="contacts.html"class="button-92">
+            <span>Contact me</span>
+        </a>
+        <a href="academics.html"class="button-92">
+            <span>Academics</span>
         </a>
 
     </header>
@@ -38,6 +39,8 @@
 
     <footer>Josiah Harris <br> Doop <br> something else <br> this <br> that
     </footer>
+
+
 </body>
 
 </html>
