--- a/more-abt-me.html
+++ b/more-abt-me.html
@@ -11,30 +11,32 @@
 <body>
     <header>
 
-        <a href="index.html">
-            <h2>Home <br></h2>
+        <a href="index.html"class="button-92">
+            <span>Home </span>
         </a> </button>
-        <a href="abt-me.html">
-            <h2>About me</h2>
+        <a href="abt-me.html"class="button-92">
+            <span>About me</span>
         </a>
-        <a href="more-abt-me.html">
-            <h1>More About Me</h1>
+        <a href="more-abt-me.html"class="button-92">
+            <span>More About Me</span>
         </a>
-        <a href="resume.html">
-            <h2>Resume</h2>
+        <a href="resume.html"class="button-92">
+            <span>Resume</span>
         </a>
-        <a href="content.html">
-            <h2>Content</h2>
+        <a href="content.html"class="button-92">
+            <span>Content</span>
         </a>
-        <a href="contacts.html">
-            <h2>Contact me</h2>
+        <a href="contacts.html"class="button-92">
+            <span>Contact me</span>
         </a>
-        <a href="github-projects.html">
-            <h2>Github Projects</h2>
+        <a href="academics.html"class="button-92">
+            <span>Academics</span>
         </a>
 
     </header>
     <img src="image of josiah 2.png" alt="Image of josiah">
+    <footer>Josiah Harris <br> Doop <br> something else <br> this <br> that
+    </footer>
 </body>
 
 </html>
