--- a/resume.html
+++ b/resume.html
@@ -10,13 +10,27 @@
 
 <body>
     <header class="resumet">
-        <a href="index.html"><h2>Home<br></h2></a>
-        <a href="abt-me.html"><h2>About me</h2></a>
-        <a href="resume.html"><h1>Resume</h1></a>
-        <a href="content.html"><h2>Content</h2></a>
-        <a href="contacts.html"><h2>Contact me</h2></a>
-        <a href="github-projects.html"><h2>Github Projects</h2></a>
+        <a href="index.html"class="button-92">
+            <span>Home</span>
+        </a>
+        <a href="abt-me.html"class="button-92">
+            <span>About me</span>
+        </a>
+        <a href="resume.html"class="button-92">
+            <span>Resume</span>
+        </a>
+        <a href="content.html"class="button-92">
+            <span>Content</span>
+        </a>
+        <a href="contacts.html"class="button-92">
+            <span>Contact me</span>
+        </a>
+        <a href="academics.html"class="button-92">
+            <span>Academics</span>
+        </a>
     </header>
+    <footer>Josiah Harris <br> Doop <br> something else <br> this <br> that
+    </footer>
 </body>
 
 </html>
