--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="contactst">
         <a href="index.html"class="button-92">
             <span>Home</span>
         </a>
