--- a/abt-me.html
+++ b/abt-me.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="home">
     <header class="abtt">
         <a href="index.html"class="button-92">
             <span>Home</span>
@@ -34,6 +34,14 @@
     </header>
     <footer>Josiah Harris <br> Doop <br> something else <br> this <br> that
     </footer>
+    <h2>My future plans:</h2>
+    <p>My plans for after high school is to join the military and go to college. The reason I want to go to the military is to travel the world as much as I possibly can while I can and the reason I want to go to college is because  I want to become a musician. Ever since I figured out I was capable of playing an instrument, I've wanted to be a musician. Ultimately my dream is to go to japan. It does not matter how long but that is my dream ultimately.</p>
+    <h2>Hobbies:</h2>
+    <p>My hobbies are skateboarding, playing video games, playing and practicing my instruments (i haven't bought any instruments yet but i do have a trombone) and exercising.
+    </p>
+    <h2>Awards and achievements:</h2>
+    <p>Over time I've come to have a number of achievements. To skip having to list all of them I'm going to tell you the top 50  that I deem the most important. </p>
+    <img class="aren" src="Aren siah.JPG" alt="The most majestic picture ever">
 </body>
 
 </html>
