--- a/index.html
+++ b/index.html
@@ -32,15 +32,19 @@
         </a>
 
     </header>
-    <h3>Hi my name is Josiah Harris. I am currently 16 years old and welcome to my website! Everything you'll see
-        here is my accomplishments, hobbies, how to contact me, and everything you need to know about me. Feel free
+    <h1 class="bign">Josiah Harris!</h1>
+
+    <h3>Hi my name is Josiah Harris. I am currently 16 years old and welcome <br>to my website! Everything you'll see
+        here is my accomplishments, hobbies, <br> how to contact me, and everything you need to know about me. Feel free <br>
         to stay as long as you want.</h3>
     <img src="image of josiah 1.png" alt="Image of josiah">
 
-    <footer>Josiah Harris <br> Doop <br> something else <br> this <br> that
+    <footer>Copyright Josiah Harris 2024 <br> Doop <br> something else <br> this <br> that
     </footer>
 
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Ultra&display=swap" rel="stylesheet">
 </body>
 
 </html>
