--- a/more-abt-me.html
+++ b/more-abt-me.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="home">
     <header class="moret">
 
         <a href="index.html"class="button-92">
