--- a/academics.html
+++ b/academics.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="home">
     <header class="academicst">
         <a href="index.html"class="button-92">
             <span>Home</span>
