--- a/abt-me.html
+++ b/abt-me.html
@@ -32,8 +32,9 @@
             <span>Academics</span>
         </a>
     </header>
-    <footer>Josiah Harris <br> Doop <br> something else <br> this <br> that
+    <footer>Copyright Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
     </footer>
+
     <h2>My future plans:</h2>
     <p>My plans for after high school is to join the military and go to college. The reason I want to go to the military is to travel the world as much as I possibly can while I can and the reason I want to go to college is because  I want to become a musician. Ever since I figured out I was capable of playing an instrument, I've wanted to be a musician. Ultimately my dream is to go to japan. It does not matter how long but that is my dream ultimately.</p>
     <h2>Hobbies:</h2>
@@ -42,6 +43,10 @@
     <h2>Awards and achievements:</h2>
     <p>Over time I've come to have a number of achievements. To skip having to list all of them I'm going to tell you the top 50  that I deem the most important. </p>
     <img class="aren" src="Aren siah.JPG" alt="The most majestic picture ever">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Ultra&display=swap" rel="stylesheet">
 </body>
 
 </html>
