--- a/academics.html
+++ b/academics.html
@@ -29,8 +29,18 @@
             <span>Academics</span>
         </a>
     </header>
-    <footer>Josiah Harris <br> Doop <br> something else <br> this <br> that
+    <footer>Copyright Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
     </footer>
+
+
+    <p>I attended Inglewood high school from 2021 till 2022 my experince at this high school was something I could never forget. My freshman year I joined band and had an amazing experince. I got to go to a 
+        jennifer lopez concert for free at the dodgers stadium and I was able to learn how to play my first instrument.
+    </p><img src="ihs.png" alt="image of inglewood high school">
+<p>I currently attend fresno high school </p>
+<img src="fhs.png" alt="Image of fresno high school">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Ultra&display=swap" rel="stylesheet">
 </body>
 
 </html>
