--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
 
     </header>
     <h1 class="bign">Josiah Harris!</h1>
-
+<section class="hm">
     <h3>Hi my name is Josiah Harris. I am currently 16 years old and welcome <br>to my website! Everything you'll see
         here is my accomplishments, hobbies, <br> how to contact me, and everything you need to know about me. Feel free <br>
         to stay as long as you want.</h3>
     <img src="image of josiah 1.png" alt="Image of josiah">
+</section>
+<footer>Copyright Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
+</footer>
 
-    <footer>Copyright Josiah Harris 2024 <br> Doop <br> something else <br> this <br> that
-    </footer>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
