--- a/more-abt-me.html
+++ b/more-abt-me.html
@@ -35,8 +35,13 @@
 
     </header>
     <img src="image of josiah 2.png" alt="Image of josiah">
-    <footer>Josiah Harris <br> Doop <br> something else <br> this <br> that
+    <footer>Copyright Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
     </footer>
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Ultra&display=swap" rel="stylesheet">
 </body>
 
 </html>
