--- a/academics.html
+++ b/academics.html
@@ -36,8 +36,18 @@
     <p>I attended Inglewood high school from 2021 till 2022 my experince at this high school was something I could never forget. My freshman year I joined band and had an amazing experince. I got to go to a 
         jennifer lopez concert for free at the dodgers stadium and I was able to learn how to play my first instrument.
     </p><img src="ihs.png" alt="image of inglewood high school">
-<p>I currently attend fresno high school </p>
+    Im currently attending fresno high school, Ive been attending since my sophomore
+     year 2022 and I plan on graduating 2025. I moved to fresno 2022 with my mom and 
+     ive had alot of fun since. I've been in the fresno high school band since my 
+     sophomore year and I plan on staying in the band until I graduate. In the fresno
+      high band I learned 3 more instruments outside of the trombone. The other 
+      instruments I learned how to play are the baritone, bass trombone, and cymbals.
+       To find out how I got it check this link out <a href="more-abt-me.html">here</a>
 <img src="fhs.png" alt="Image of fresno high school">
+    <p>
+        
+    </p>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Ultra&display=swap" rel="stylesheet">
