--- a/content.html
+++ b/content.html
@@ -31,7 +31,12 @@
     </header>
     <footer>Copyright Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
     </footer>
-
+    <img src="T O Z 1.png" alt="image of the tale of ze">
+    <img src="T O Z 2.png" alt="image of the tale of ze">
+    <img src="Screenshot of P E 1.png" alt="image of the jurassic express">
+    <img src="Screenshot of P E 2.png" alt="image of the jurassic express">
+    <img src="cert ss.png" alt="image of the certificate maker">
+    <img src="cert ss 2.png" alt="image of the certificate maker">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
