--- a/academics.html
+++ b/academics.html
@@ -10,47 +10,70 @@
 
 <body class="home">
     <header class="academicst">
-        <a href="index.html"class="button-92">
+        <a href="index.html" class="button-92">
             <span>Home</span>
         </a>
-        <a href="abt-me.html"class="button-92">
+        <a href="abt-me.html" class="button-92">
             <span>About me</span>
         </a>
-        <a href="resume.html"class="button-92">
+        <a href="resume.html" class="button-92">
             <span>Resume</span>
         </a>
-        <a href="content.html"class="button-92">
+        <a href="content.html" class="button-92">
             <span>Content</span>
         </a>
-        <a href="contacts.html"class="button-92">
+        <a href="contacts.html" class="button-92">
             <span>Contact me</span>
         </a>
-        <a href="academics.html"class="button-92">
+        <a href="academics.html" class="button-92">
             <span>Academics</span>
         </a>
     </header>
-    <footer>Copyright Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
+    <footer>&copy;Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a
+            class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a
+            href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
     </footer>
 
-
-    <p>I attended Inglewood high school from 2021 till 2022 my experince at this high school was something I could never forget. My freshman year I joined band and had an amazing experince. I got to go to a 
+<section class="A">
+    <p>I attended Inglewood high school from 2021 till 2022 my experince at this high school was something I could never
+        forget. My freshman year I joined band and had an amazing experince. I got to go to a
         jennifer lopez concert for free at the dodgers stadium and I was able to learn how to play my first instrument.
     </p><img src="ihs.png" alt="image of inglewood high school">
+</section>
+<section class="B">
+<p>  
     Im currently attending fresno high school, Ive been attending since my sophomore
-     year 2022 and I plan on graduating 2025. I moved to fresno 2022 with my mom and 
-     ive had alot of fun since. I've been in the fresno high school band since my 
-     sophomore year and I plan on staying in the band until I graduate. In the fresno
-      high band I learned 3 more instruments outside of the trombone. The other 
-      instruments I learned how to play are the baritone, bass trombone, and cymbals.
-       To find out how I got it check this link out <a href="more-abt-me.html">here</a>
-<img src="fhs.png" alt="Image of fresno high school">
+    year 2022 and I plan on graduating 2025. I moved to fresno 2022 with my mom and
+    ive had alot of fun since. I've been in the fresno high school band since my
+    sophomore year and I plan on staying in the band until I graduate. In the fresno
+    high band I learned 3 more instruments outside of the trombone. The other
+    instruments I learned how to play are the baritone, bass trombone, and cymbals.
+    To find out how I got it check this link out <a href="more-abt-me.html">here</a>
+</p>
+    <img src="fhs.png" alt="Image of fresno high school">
+</section>
+<section class="C">
     <p>
-        
+        I am also attending this school that goes by the acronym of CART which stands
+        for Center for Advanced Research and Technology. This school is as you can probably
+        guess is a school for specialized learning for some specific things like if you
+        want to learn about forensics or psychology or many other things. The class
+        I chose and that I'm currently enrolled in is called web applications or web
+        app for short. Web app has been one of my favorite and most challenging classes
+        that I have ever taken. In my opinion I think that this class has taught me
+        more than I've learned in any other subject besides band. When you enroll in
+        this class it first starts off as some fun team building activities to not
+        only get to know your peers in your class but to know people in 2 of the other
+        classes. Then slowly but surely you get introduced to coding languages first
+        HTML then CSS and after that Javascript. In between that we did learn alot
+        about other coding languages but these were the ones we use in this class.
     </p>
-
+</section>
+    <img src="cart.png" alt="Image of CART high school">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Ultra&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Ultra&display=swap"
+        rel="stylesheet">
 </body>
 
 </html>
