--- a/content.html
+++ b/content.html
@@ -29,7 +29,7 @@
             <span>Academics</span>
         </a>
     </header>
-    <footer>Copyright Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
+    <footer>&copy; Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
     </footer>
     <img src="T O Z 1.png" alt="image of the tale of ze">
     <img src="T O Z 2.png" alt="image of the tale of ze">
