--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
 
     </header>
     <h1 class="bign">Josiah Harris!</h1>
-<section class="hm">
-    <h3>Hi my name is Josiah Harris. I am currently 16 years old and welcome <br>to my website! Everything you'll see
+<section>
+    <!-- change class below for text and put this in class display: flex;
+    justify-content: flex-start; -->
+    <h3 class="">Hi my name is Josiah Harris. I am currently 16 years old and welcome <br>to my website! Everything you'll see
         here is my accomplishments, hobbies, <br> how to contact me, and everything you need to know about me. Feel free <br>
         to stay as long as you want.</h3>
     <img src="image of josiah 1.png" alt="Image of josiah">
 </section>
-<footer>Copyright Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
+<footer>&copy; Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
 </footer>
 
 
