--- a/more-abt-me.html
+++ b/more-abt-me.html
@@ -35,7 +35,7 @@
 
     </header>
     <img src="image of josiah 2.png" alt="Image of josiah">
-    <footer>Copyright Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
+    <footer>&copy;Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
     </footer>
 
 
