increse the leng

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
     </header>
     <h1 class="bign">Josiah Harris!</h1>
 <section>
-    <!-- change class below for text and put this in class display: flex;
-    justify-content: flex-start; -->
-    <h3 class="">Hi my name is Josiah Harris. I am currently 16 years old and welcome <br>to my website! Everything you'll see
+    
+    <h3 class="texth">Hi my name is Josiah Harris. I am currently 16 years old and welcome <br>to my website! Everything you'll see
         here is my accomplishments, hobbies, <br> how to contact me, and everything you need to know about me. Feel free <br>
         to stay as long as you want.</h3>
     <img src="image of josiah 1.png" alt="Image of josiah">
