--- a/academics.html
+++ b/academics.html
@@ -33,7 +33,7 @@
             class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a
             href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
     </footer>
-
+</section>
 <section class="A">
     <p>I attended Inglewood high school from 2021 till 2022 my experince at this high school was something I could never
         forget. My freshman year I joined band and had an amazing experince. I got to go to a
