--- a/abt-me.html
+++ b/abt-me.html
@@ -36,12 +36,12 @@
     </footer>
 
     <h2>My future plans:</h2>
-    <p>My plans for after high school is to join the military and go to college. The reason I want to go to the military is to travel the world as much as I possibly can while I can and the reason I want to go to college is because  I want to become a musician. Ever since I figured out I was capable of playing an instrument, I've wanted to be a musician. Ultimately my dream is to go to japan. It does not matter how long but that is my dream ultimately.</p>
+    <h3>My plans for after high school is to join the military and go to college. The reason I want to go to the military is to travel the world as much as I possibly can while I can and the reason I want to go to college is because  I want to become a musician. Ever since I figured out I was capable of playing an instrument, I've wanted to be a musician. Ultimately my dream is to go to japan. It does not matter how long but that is my dream ultimately.</h3>
     <h2>Hobbies:</h2>
-    <p>My hobbies are skateboarding, playing video games, playing and practicing my instruments (i haven't bought any instruments yet but i do have a trombone) and exercising.
-    </p>
+    <h3>My hobbies are skateboarding, playing video games, playing and practicing my instruments (i haven't bought any instruments yet but i do have a trombone) and exercising.
+    </h3>
     <h2>Awards and achievements:</h2>
-    <p>Over time I've come to have a number of achievements. To skip having to list all of them I'm going to tell you the top 50  that I deem the most important. </p>
+    <h3>Over time I've come to have a number of achievements. To skip having to list all of them I'm going to tell you the top 50  that I deem the most important. </h3>
     <img class="aren" src="Aren siah.JPG" alt="The most majestic picture ever">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
