1 step foward 10 steps back

--- a/abt-me.html
+++ b/abt-me.html
@@ -34,9 +34,10 @@
     </header>
     <footer>&copy;Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
     </footer>
-
+<section class="some">
     <h2>My future plans:</h2>
     <h3>My plans for after high school is to join the military and go to college. The reason I want to go to the military is to travel the world as much as I possibly can while I can and the reason I want to go to college is because  I want to become a musician. Ever since I figured out I was capable of playing an instrument, I've wanted to be a musician. Ultimately my dream is to go to japan. It does not matter how long but that is my dream ultimately.</h3>
+    </section>
     <h2>Hobbies:</h2>
     <h3>My hobbies are skateboarding, playing video games, playing and practicing my instruments (i haven't bought any instruments yet but i do have a trombone) and exercising.
     </h3>
