--- a/abt-me.html
+++ b/abt-me.html
@@ -16,6 +16,7 @@
         <a href="abt-me.html"class="button-92">
             <span>About me</span>
         </a>
+        <!-- coming soon -->
         <a href="more-abt-me.html"class="button-92">
             <span>More about me</span>
         </a>
@@ -38,11 +39,15 @@
     <h2>My future plans:</h2>
     <h3>My plans for after high school is to join the military and go to college. The reason I want to go to the military is to travel the world as much as I possibly can while I can and the reason I want to go to college is because  I want to become a musician. Ever since I figured out I was capable of playing an instrument, I've wanted to be a musician. Ultimately my dream is to go to japan. It does not matter how long but that is my dream ultimately.</h3>
     </section>
+<section class="some1">
     <h2>Hobbies:</h2>
     <h3>My hobbies are skateboarding, playing video games, playing and practicing my instruments (i haven't bought any instruments yet but i do have a trombone) and exercising.
     </h3>
+</section>
+<section class="some2">
     <h2>Awards and achievements:</h2>
-    <h3>Over time I've come to have a number of achievements. To skip having to list all of them I'm going to tell you the top 50  that I deem the most important. </h3>
+    <h3>Over time I've come to have a number of achievements. To skip having to list all of them I'm going to tell you the top 5 that I deem the most important <a href="more-abt-me.html">here.</a></h3>
+</section>
     <img class="aren" src="Aren siah.JPG" alt="The most majestic picture ever">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
