--- a/academics.html
+++ b/academics.html
@@ -35,13 +35,13 @@
     </footer>
 </section>
 <section class="A">
-    <p>I attended Inglewood high school from 2021 till 2022 my experince at this high school was something I could never
+    <h3>I attended Inglewood high school from 2021 till 2022 my experince at this high school was something I could never
         forget. My freshman year I joined band and had an amazing experince. I got to go to a
         jennifer lopez concert for free at the dodgers stadium and I was able to learn how to play my first instrument.
-    </p><img src="ihs.png" alt="image of inglewood high school">
+    </h3><img src="ihs.png" alt="image of inglewood high school">
 </section>
 <section class="B">
-<p>  
+<h3>  
     Im currently attending fresno high school, Ive been attending since my sophomore
     year 2022 and I plan on graduating 2025. I moved to fresno 2022 with my mom and
     ive had alot of fun since. I've been in the fresno high school band since my
@@ -49,11 +49,11 @@
     high band I learned 3 more instruments outside of the trombone. The other
     instruments I learned how to play are the baritone, bass trombone, and cymbals.
     To find out how I got it check this link out <a href="more-abt-me.html">here</a>
-</p>
+</h3>
     <img src="fhs.png" alt="Image of fresno high school">
 </section>
 <section class="C">
-    <p>
+    <h3>
         I am also attending this school that goes by the acronym of CART which stands
         for Center for Advanced Research and Technology. This school is as you can probably
         guess is a school for specialized learning for some specific things like if you
@@ -67,7 +67,7 @@
         classes. Then slowly but surely you get introduced to coding languages first
         HTML then CSS and after that Javascript. In between that we did learn alot
         about other coding languages but these were the ones we use in this class.
-    </p>    
+    </h3>    
     <img src="cart.png" alt="Image of CART high school">
 </section>
 
