--- a/more-abt-me.html
+++ b/more-abt-me.html
@@ -34,12 +34,20 @@
         </a>
 
     </header>
+<section>
     <img src="image of josiah 2.png" alt="Image of josiah">
+</section>
     <footer>&copy;Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
     </footer>
 
     <!-- explain how i started playing all of the instruments  -->
-    <p></p>
+    <h3>
+        1st Getting to play my first solo<br>
+        2nd Winning awards after going to a JROTC event in selma<br>
+        3rd Getting student of the month award<br>
+        4th Being nominated for cadet of the month<br>
+        5th Winning the first year I played basketball<br>
+    </h3>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
