--- a/resume.html
+++ b/resume.html
@@ -29,6 +29,10 @@
             <span>Academics</span>
         </a>
     </header>
+    <section class="resume">
+        <embed src="Professional Resume (1).pdf" width="800" height="800" 
+ type="application/pdf">
+    </section>
     <footer>&copy;Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
     </footer>
 
