--- a/content.html
+++ b/content.html
@@ -31,13 +31,18 @@
     </header>
     <footer>&copy; Josiah Harris 2024 <br> <a class="foot" href="mailto:ninjathunda9@gmail.com">Gmail</a> <br> <a class="foot" href="https://github.com/saltywoodchucksk8r">Github</a><br><a href="https://www.linkedin.com/in/josiah-harris-252584308/">linkedin</a>
     </footer>
+    <section class="content">
     <img src="T O Z 1.png" alt="image of the tale of ze">
-    <img src="T O Z 2.png" alt="image of the tale of ze">
+    <a href="https://j-s-pizza.netlify.app/" class="button-92"><span>Visit</span></a>
+    </section>
+    <section class="content">
     <img src="Screenshot of P E 1.png" alt="image of the jurassic express">
-    <img src="Screenshot of P E 2.png" alt="image of the jurassic express">
+    <a href="https://samuels-and-josiahs-cart-showcase.netlify.app/prehistoric-express/home" class="button-92"><span>Visit</span></a>
+</section>
+<section class="content">
     <img src="cert ss.png" alt="image of the certificate maker">
-    <img src="cert ss 2.png" alt="image of the certificate maker">
-
+    <a href="https://super-cert.netlify.app/" class="button-92"><span>Visit</span></a>
+</section>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Ultra&display=swap" rel="stylesheet">
